fixing excessive social followings API calls